<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro"
    android:id="@+id/fundo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/botao_cadastrar"
        android:textSize="25sp"
        android:id="@+id/titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_raca"
            android:text="@string/raca"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_raca"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_preco"
            android:text="@string/preco_medio"
            android:textSize="20sp"
            />

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/et_preco"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_crianca"
            android:text="Esse cachorro é para crianças?"
            android:textSize="20sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sw_crianca"
            />

        <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:onClick="cadastrar"
            android:text="@string/botao_cadastrar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cachorro_feliz"
            android:id="@+id/iv_cachorro"
            android:visibility="invisible"
            />
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>